// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Database helpers should get max length of enumeration 1`] = `"Enumeration can contain only string values to get a max length."`;

exports[`Database helpers should get max length of enumeration 2`] = `"Enumeration can contain only string values to get a max length."`;

exports[`Database helpers should get values from mixed enumeration 1`] = `
Array [
  1,
  100,
  10000,
  "some text",
  "some longer text",
  "some even longer text",
]
`;

exports[`Database helpers should get values from number enumeration 1`] = `
Array [
  1,
  100,
  10000,
]
`;

exports[`Database helpers should get values from string enumeration 1`] = `
Array [
  "some text",
  "some longer text",
  "some even longer text",
]
`;
